httpbin-manifests/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: httpbin
    discovery.solo.io/function_discovery: enabled
  name: httpbin
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
